test/errors/malformed_payload.ml
let () = try f () with [%effect? E (* missing [, k] *)] -> ()
